not responsive, but at least it works and some bugs are fixed :D

--- a/sass/_landing.sass
+++ b/sass/_landing.sass
@@ -135,4 +135,16 @@ body
             font-size: 14px
             font-weight: 300
             color: $feature-desc
+    section.about-us
+      position: relative
+      background: url("../img/about-us-BG.png") center center no-repeat
+      .about-us-devices
+        position: absolute
+        left: 0
+        bottom: 0
+        img
+          width: 45%
+          height: auto
+      h2
+        color: #ffffff
 
